mType/tests/testFiles/import/error/importDirectory.mt
// Test: Attempting to import from a directory instead of a file
@Script
import { SomeClass } from "./modules"

var obj = SomeClass();
